--- a/css/framework.scss
+++ b/css/framework.scss
@@ -1,3 +1,56 @@
+// start bacground and color
+$bg-light: white;
+$color-black: #000;
+$bg-eee: #eee;
+$blue-color: #0075ff;
+$blue-alt-color: #0d69d5;
+$orange-color: #f59e0b;
+$green-color: #22c55e;
+$red-color: #f44336;
+$grey-color: #888;
+
+.bg-eee {
+    background-color: rgba(238, 238, 238, 0.838);
+}
+
+.c-eee {
+    color: $bg-eee;
+}
+
+.bg-w {
+    background-color: $bg-light;
+}
+
+.c-w {
+    color: $bg-light;
+}
+
+.c-black {
+    color: $color-black ;
+}
+
+.bg-black {
+    background-color: $color-black ;
+}
+
+.c-gray {
+    color: $grey-color;
+}
+
+.bg-gray {
+    color: red;
+}
+
+.bg-blue {
+    background-color: $blue-color;
+}
+
+.c-blue {
+    color: $blue-color;
+}
+
+// End bacground and color
+
 // dispaly
 .d-flex {
     display: flex;
@@ -10,27 +63,33 @@
 .d-block {
     display: block;
 }
-.bg-r{
+
+.bg-r {
     background-color: red;
 }
+
 .align-center {
     display: flex;
     align-items: center;
 }
+
 .justify-center {
     display: flex;
     justify-content: center;
 }
-.justify-between{
+
+.flex-between {
     display: flex;
     justify-content: space-between;
 }
-.flex-row{
+
+.flex-row {
     display: flex !important;
     flex-direction: row !important;
 }
-.flex-column{
-    
+
+.flex-column {
+
     background-color: red;
 }
 
@@ -52,6 +111,42 @@
 }
 
 // margin
+.m-0 {
+    margin: 0;
+}
+
+.mt-5 {
+    margin-top: 5px;
+}
+
+.m-10 {
+    margin: 10px;
+}
+
+.mt-10 {
+    margin-top: 10px;
+}
+
+.mb-10 {
+    margin-bottom: 10px;
+}
+
+.mr-10 {
+    margin-right: 10px;
+}
+
+.ml-10 {
+    margin-left: 10px;
+}
+
+.mx-10 {
+    margin: 0 10px;
+}
+
+.my-10 {
+    margin: 10px 0;
+}
+
 .m-20 {
     margin: 20px;
 }
@@ -125,16 +220,8 @@
     padding: 20px 0;
 }
 
-// bacground and color
-$bg-light: white;
 
-.bg-w {
-    background-color: $bg-light;
-}
 
-.c-black {
-    color: black;
-}
 
 // postion
 .p-relative {
@@ -149,13 +236,24 @@ $bg-light: white;
     position: fixed;
 }
 
+.flex-1 {
+    flex: 1;
+}
+
 /* text */
 .txt-c {
     text-align: center;
 }
 
+.w-fit {
+    width: fit-content;
+}
+
 .fs-14 {
     font-size: 14px;
+}
+.fs-15 {
+    font-size: 15px;
 }
 
 // ul
@@ -165,10 +263,31 @@ $bg-light: white;
 
 // Border
 
+.red-5 {
+    border-radius: 5px;
+}
 .red-6 {
     border-radius: 6px;
 }
-
+.red-7 {
+    border-radius: 7px;
+}
+.red-8 {
+    border-radius: 8px;
+}
+.red-10 {
+    border-radius: 10px;
+}
+.red-15{
+    border-radius: 15px;
+}
+.b-none{
+    border: none;
+}
+//     box-shadow
+.shadow-1{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 /* Component*/
 
 .flex-center {
@@ -182,9 +301,19 @@ $bg-light: white;
     justify-content: space-between;
     align-items: center;
 }
-
+.btn{
+    padding: 4px 10px ;
+    border-radius: 6px;
+    &:hover{
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.19);
+    }
+}
 @media screen and (max-width:767px) {
     .block-sm {
         display: block;
+    }
+
+    .sm-hide {
+        display: none;
     }
 }
