--- a/css/master.css
+++ b/css/master.css
@@ -224,6 +224,13 @@ a {
     margin-right: 10px;
   }
 }
+@media screen and (max-width: 1200px) {
+  .wrapper {
+    grid-template-columns: minmax(100%, 1fr);
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
 /**Start Welcome */
 .welcome {
   overflow: hidden;
@@ -332,4 +339,94 @@ a {
 .quick-draft form .save:hover {
   background-color: #0d69d5;
   box-shadow: 0 0 0px #ddd;
+}
+
+/**Strat Yearly Targets */
+.targets {
+  padding-bottom: 0px !important;
+}
+
+.targets .target-row .icon {
+  width: 80px;
+  height: 74px;
+  margin-right: 15px;
+}
+
+.targets .details {
+  flex: 1;
+}
+
+.targets .details .progress {
+  height: 4px;
+}
+
+.targets .details .progress > span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+}
+
+.targets .details .progress > span span {
+  position: absolute;
+  right: -16px;
+  bottom: 16px;
+  padding: 3px 5px;
+  color: white;
+  border-radius: 5px;
+  font-size: 12px;
+  box-shadow: 0 0 9px #ddd;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.targets .details .progress > span span::after {
+  content: "";
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px;
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  box-shadow: 0 0 10x #ddd;
+}
+
+.targets .details .progress > .blue span::after {
+  border-top-color: #0075ff;
+}
+
+.targets .details .progress > .orange span::after {
+  border-top-color: #f59e0b;
+}
+
+.targets .details .progress > .green span::after {
+  border-top-color: #22c55e;
+}
+
+.blue .icon, .blue .progress {
+  background-color: rgba(0, 117, 255, 0.2);
+}
+
+.orange .icon, .orange .progress {
+  background-color: rgba(245, 158, 11, 0.2);
+}
+
+.green .icon, .green .progress {
+  background-color: rgba(34, 197, 94, 0.2);
+}
+
+/**end Yearly Targets */
+.tickets .box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: calc(50% - 10px);
+}
+@media (max-width: 767px) {
+  .tickets .box {
+    width: 100%;
+  }
 }/*# sourceMappingURL=master.css.map */
