--- a/css/master.scss
+++ b/css/master.scss
@@ -164,7 +164,7 @@ a {
                     &::placeholder {
                         opacity: 0;
                         padding-left: 40px;
-                        color: red;
+                         
                     }
                 }
             }
@@ -248,6 +248,7 @@ a {
     align-items: center;
 
 }
+
 //  .wrapper>div{
 //     height: 329px !important;
 //     overflow: hidden;
@@ -260,9 +261,10 @@ a {
     }
 
 }
+
 @media screen and (max-width:1200px) {
     .wrapper {
-        grid-template-columns: minmax(100%, 1fr); 
+        grid-template-columns: minmax(100%, 1fr);
         margin-left: 10px;
         margin-right: 10px;
     }
@@ -366,24 +368,29 @@ a {
 
 
 }
-/**quick-draf */
-.quick-draft{
 
-    form input{
+/**quick-draf */
+.quick-draft {
+
+    form input {
         border: 1px solid #eee;
         transition: 0.5s all;
-        &:focus{
+
+        &:focus {
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.089);
         }
     }
-    form textarea{ 
-        border: 1px solid #eee; 
+
+    form textarea {
+        border: 1px solid #eee;
         resize: none;
-        &:focus{
+
+        &:focus {
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.089);
         }
     }
-    form .save{
+
+    form .save {
         margin: 0 0 0 auto;
         transition: 0.3s all;
         border-style: none;
@@ -402,27 +409,32 @@ a {
 }
 
 /**Strat Yearly Targets */
- .targets{ 
+.targets {
     padding-bottom: 0px !important;
- }
-.targets .target-row .icon{
+}
+
+.targets .target-row .icon {
     width: 70px;
     height: 60px;
     margin-right: 15px;
 }
-.targets .details{
+
+.targets .details {
     flex: 1;
 }
-.targets .details .progress{
+
+.targets .details .progress {
     height: 4px;
 }
-.targets .details .progress>span{
+
+.targets .details .progress>span {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
 }
-.targets .details .progress>span span{
+
+.targets .details .progress>span span {
     position: absolute;
     right: -16px;
     bottom: 16px;
@@ -432,7 +444,8 @@ a {
     font-size: 12px;
     box-shadow: 0 0 9px #ddd;
     user-select: none;
-    &::after{
+
+    &::after {
         content: '';
         border-color: transparent;
         border-style: solid;
@@ -445,44 +458,142 @@ a {
 
     }
 }
-.targets .details .progress> .blue span::after{
+
+.targets .details .progress>.blue span::after {
     border-top-color: $blue-color;
 
 }
-.targets .details .progress> .orange span::after{
+
+.targets .details .progress>.orange span::after {
     border-top-color: $orange-color;
 
 }
-.targets .details .progress> .green span::after{
+
+.targets .details .progress>.green span::after {
     border-top-color: $green-color;
 
 }
-.blue .icon , .blue .progress{
+
+.blue .icon,
+.blue .progress {
     background-color: rgba($color: $blue-color, $alpha: 0.2);
 }
-.orange .icon , .orange .progress{
+
+.orange .icon,
+.orange .progress {
     background-color: rgba($color: $orange-color, $alpha: 0.2);
 }
-.green .icon , .green .progress{
+
+.green .icon,
+.green .progress {
     background-color: rgba($color: $green-color, $alpha: 0.2);
-}  
+}
+
 /**end Yearly Targets */
 
 
-@mixin flex-center{
+@mixin flex-center {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.tickets .box{
+
+.tickets .box {
     @include flex-center();
-    flex-direction: column;  
+    flex-direction: column;
     width: calc(50% - 10px);
     height: 130px !important;
+
     @media (max-width:767px) {
         width: 100%;
     }
-    @media (max-width:1200px) {
-        
+
+    @media (max-width:1200px) {}
+}
+
+/**Start lastest-news */
+
+.lastest-news {
+    flex-direction: column;
+
+    .news-row:not(:last-of-type) {
+        margin-bottom: 13.5px;
+        border-bottom: 1px solid #eee;
+        padding-bottom: 13.5px;
+
     }
+
+    .news-row {
+        @media (max-width:500px) {
+            display: flex ;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center; 
+            width: 100%;
+            margin: auto;
+        }
+        img {
+
+            width: 100px;
+            border-radius: 6px;
+            margin-right: 15px;
+            @media (max-width:500px) { 
+                width: 150px;
+            }
+        }
+
+        >div {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .body{
+             flex-direction: row;
+            width: 100%;
+            @media (max-width:500px) {
+                flex-direction: column;
+                 padding: 20px;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+        .info {
+            
+            h3 {
+                width: 100%; 
+                 margin-top:-5px !important;
+                font-size: 0.8rem;
+                @media (max-width:500px) {
+                    margin-top:0px !important;
+                    width: 100% !important;
+                    text-align: center;
+                    font-size: 15px ;
+                }
+            }
+            p {
+                margin-top: -0.1rem; 
+                font-size: 0.7rem;
+                @media (max-width:500px) {
+                    margin-top:0px !important;
+                    margin-bottom: 20px;
+                    width: 100% !important;
+                    text-align: center;
+                    font-size: 13px;
+                }
+            }
+        }
+    }
+
+}
+.lastest-tasks{
+    .task-row:not(:last-of-type){
+        margin-bottom: 13.5px;
+        border-bottom: 1px solid #eee;
+        padding-bottom: 13.5px;
+    }
+}
+.news-row:not(:last-of-type) {
+
+
 }
