--- a/css/master.scss
+++ b/css/master.scss
@@ -597,3 +597,47 @@ a {
 
 
 }
+
+.item{
+    display: flex;
+    align-items: center;
+    padding: 0rem 0.5rem;
+    border-radius: 0.2rem;
+    font-size: 0.65rem;
+    width: fit-content;
+    height: 1.3rem;
+    user-select: none;
+}
+
+/**latest_uploads */
+
+.latest_uploads{
+
+    .icon-section8{
+        width: 30px;
+        height: 30px;
+    }
+    .body{
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        align-items: center ;
+        .info{
+            h3{
+                font-size: 0.8rem !important;
+                font-weight: 600;
+                margin-left: 20px;
+                margin-bottom: 5px;
+            }
+            p{
+                font-size: 0.8rem !important;
+             
+                margin-left: 20px;
+                margin-bottom: 5px;  
+            }
+        }
+    }
+}
+.latest_uploads:not(:last-of-type){
+     border-bottom: 1px solid #eee;
+ }
